Completed sqrt functionalities

--- a/Assembly_C_and_Optimization/.project
+++ b/Assembly_C_and_Optimization/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assembly_C_Optimization</name>
+	<name>Assembly_C_and_Optimization</name>
 	<comment></comment>
 	<projects>
 	</projects>
