--- a/Blinky_Blinky/.project
+++ b/Blinky_Blinky/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>blinky_blinky</name>
+	<name>Blinky_Blinky</name>
 	<comment></comment>
 	<projects>
 	</projects>
